[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.21.0", features = [ "derive" ] }
pollster = "0.4.0"
wgpu = "23.0.1"
winit = { version = "0.30.8", features = ["rwh_05"] }
env_logger = "0.11.6"
